  * [Roland] Added "objectclass: domain" to the top-level LDAP object when
    it's not the same as the top-level LDAP object created by slapd, see
    Gforge bug #518.  Also, (closes: #208849), since I believe it's the
    same bug.
  * [Roland] Create /var/lib/gforge/etc in all packages, for the upcoming
    move of generated config files.

 -- Roland Mas <lolando@debian.org>  Sun, 21 Sep 2003 12:19:45 +0200

gforge (3.0-6) unstable; urgency=low

  * [Roland] Suppressed warning in gforge-common.postinst when the
    sourceforge user does not exist.

 -- Roland Mas <lolando@debian.org>  Fri, 22 Aug 2003 17:38:01 +0200

gforge (3.0-5) unstable; urgency=low

  * [Roland] Changed proftpd configuration file to comply with current
    syntax.  Patch from Igor Genibel <igenibel@debian.org>, thanks Igor
    (closes: #203341).
  * [Roland] Fixed the *-owner alias for Mailman lists.  Patch from Igor
    Genibel again (closes: #203522).
  * [Roland] Changed the objectclass: person to objectclass: account,
    since person requires an additional field.

 -- Roland Mas <lolando@debian.org>  Fri, 22 Aug 2003 12:24:35 +0200

gforge (3.0-4) unstable; urgency=low

  * [Roland] Make sure the $gforge_base_dn, ou=People,$gforge_base_dn and
    other needed LDAP records exist before we try to insert new
    sub-trees/records in them (closes: #201536).
  * [Christian] Corrected my stupid error in ldap.php that made a warning
    on changing ldap protocol version (closes: #202208)
  * [Christian] Added dependancy on cpio for gforge-common
  * [Roland] Updated French translation for Debconf templates, again
    thanks to the French l10n team (closes: #201668).
  * [Roland] The French l10n team have too much time on their hands, but
    they provide valid suggestions as for which Debconf templates should
    be translated and which shouldn't.  I obey the French l10n team's
    wishes in that regard (closes: #201666).